# MinVar

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  callvar.py  minvar.py  mkdocs.yml  optimassembly.py  prsrls.tex  setup.cfg  setup.py  tox.ini  tox.old.ini
OptimAssembly/: OptimAssembly.md  optimassembly.py
ReportDRM/: README.md
ReportDRM/db/: INVariation.txt  PRVariation.txt  README.md  RT.faa  RT.fna  RTVariation.txt  integrase.faa  integrase.fna  masterComments_PI.txt  protease.faa
ReportDRM/src/: prsrls.tex  reportdrm.py  tests.py
ansible/: hosts  setup-host.sh  setup-hosts.sh  setup.retry  setup.yml
apidoc/: conf.py  index.rst  minvar.rst
db/: HXB2_pol_gene.fasta  RT.fasta  integrase.fasta  protease.fasta
docs/: _config.yml  _index.md  mkdocs.yml  report.html
docs/_includes/: about.html  contact.html  docs.html  explain.html  features.html  footer.html  head.html  header.html  license.html  promo.html
docs/_layouts/: default.html  report.html
minvar/: Alignment.py  __main__.py  annotate.py  blast2sam.py  callvar.py  common.py  prepare.py  reportdrm.py  stats.py
minvar/ReportDRM/: .gitignore
minvar/db/: HCV_single_cons.fasta  HIV1_CON_2002_genome_DNA.fasta  HIV_cons_db.nhr  HIV_cons_db.nin  HIV_cons_db.nsq  HXB2_pol_gene.fasta.fai  NS3_raw.csv  NS5A_raw.csv  (+5 more)
rtd/: _about.md  _user-guide.md  index.md  license.md  mkdocs.yml
scripts/: fetch_hcv_ref.py  fetch_ras_tables.py  get_prot_ref.py
src/: template.tex
tests/: long_aa.fasta  small_merged_muts.csv  test_annotate.py  test_prepare.py  test_reportdrm.py  testminvar.py  vcf_test.vcf
(+169 files in other folders)
