[metadata]
name = MinVar
author = Osvaldo Zagordi
author-email = firstname.lastname@gmail.com
summary = Minority variants in HIV
description-file = README.MD
home-page = https://git.io/minvar
license = Custom
keywords =
    HIV, DRM, minority

[files]
packages =
    minvar

data_files =
    minvar/db =
        minvar/db/HXB2_pol_gene.fasta
        minvar/db/HIV_consensus.fasta
        minvar/db/HIV_cons_db.nsq
        minvar/db/HIV_cons_db.nin
        minvar/db/HIV_cons_db.nhr
        minvar/db/template.tex
        minvar/db/masterComments_RTI.txt
        minvar/db/masterComments_PI.txt
        minvar/db/masterComments_INI.txt
        minvar/db/consensus_B.fna
        minvar/db/consensus_B.faa
        minvar/db/consensus_B.bed
        minvar/db/HXB2_pol_gene.fasta.fai
        minvar/db/consensus_B.fna.fai

[entry_points]
console_scripts =
    minvar = minvar.__main__:main
